Fixed overflow problem with text and componentservice bug

--- a/MixerControl-app/src/app/recipe-overview/recipe-overview/recipe-overview.component.scss
+++ b/MixerControl-app/src/app/recipe-overview/recipe-overview/recipe-overview.component.scss
@@ -37,7 +37,9 @@
 
 .recipe-title{
   text-align: center;
-
+  hyphens: auto;
+  word-break: break-all;
+  word-wrap: break-word;
 
 }
 
